--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-инициализация
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <header>
+        logo-img
+        loupe-img
+        <button>
+            menu-img
+        </button>
+        <a href="#">person-img</a>
+        <a href="#">cart-img</a>
+        <nav>
+            menu
+            <ul>
+                <li>
+                    <h2>MAN</h2>
+                    <ul>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h2>WOMAN</h2>
+                    <ul>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                    </ul>
+
+                </li>
+
+                <li>
+                    <h2>KIDS</h2>
+                    <ul>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                        <li><a href="#"></a>link</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            man-img
+
+            <h1>the brand of luxerious fashion</h1>
+
+        </section>
+        <section>
+            <h2>offers</h2>
+            <ul>
+                <li>
+                    <h3>30% OFF</h3>
+                    <p>FOR WOMEN</p>
+                </li>
+                <li>
+                    <h3>30% OFF</h3>
+                    <p>FOR WOMEN</p>
+                </li>
+                <li>
+                    <h3>30% OFF</h3>
+                    <p>FOR WOMEN</p>
+                </li>
+                <li>
+                    <h3>30% OFF</h3>
+                    <p>FOR WOMEN</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+
+            <h2>featured items</h2>
+            <p>Shop for items based on what we featured in this week</p>
+            <ul>
+                <li>
+                    img
+                    <h3>ellery x m'o capsule</h3>
+                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
+                        teams up with Moda Operandi.</p>
+                    <p>$52.00</p>
+                </li>
+                <li></li>
+                <li></li>
+            </ul>
+
+        </section>
+        <section></section>
+    </main>
+    <footer></footer>
+
+</body>
+
+</html>
